--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang=“en-US”>
+<head>
+<title>Home</title>
+</head>
+<body>
+
+<h1>Molly Trace</h1>
+
+<a href="https://www.w3schools.com">This is a link</a>
+
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+
+<p>This is a paragraph.</p>
+<br>
+
+</body>
+</html>
