added social buttons

--- a/index.html
+++ b/index.html
@@ -67,12 +67,20 @@
   </tr>
 </table>
 
-
+<br>
+<br>
+<br>
+<br>
 <!-- Footer -->
-<footer class="footer" style="margin-top:128px"> 
-  <i class="email"></i>
-  <i class="linkedin"></i>
-</footer>
+<div class="footer-social-icons">
+    <h4 class="_14">Contact me on</h4>
+    <ul class="social-icons">
+        <li><a href="" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
+        <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+        <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+        <li><a href="" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+    </ul>
+</div>
 
 
 
