--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ typingEffect()
 <br>
 <!-- Footer -->
 <div class="footer-social-icons">
-    <h4 class="_14">Let's Connect</h4>
+    <h4 class="foot">Let's Connect</h4>
     <ul class="social-icons">
         <li><a href="mailto:molly.trace@gmail.com" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
         <li><a href="https://www.linkedin.com/in/mollydtrace/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
