--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="shortcut icon" href="sitepictures/16x16.ico">
+<link rel="shortcut icon" href="sitepictures/16x16w.ico">
 <title>Molly Trace</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
