--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
 <br>
 <br>
 <h2>Under Construction</h2>
-<img src="sitepictures/wrench.png" alt="wrench" style="width:50px;height:50px;">
+<img class ="construction" src="sitepictures/wrench.png" alt="wrench" style="width:50px;height:50px;">
 <br>
 <br>
 <br>
