updated contact page

--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Molly Trace</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+</head>
 
 <body>
 
@@ -26,29 +27,88 @@
         </ul>
       </nav>
     </div>
-<br>
-<br>
-<br>
-<br>
-<h2>Under Construction</h2>
-<img class ="construction" src="sitepictures/wrench.png" alt="wrench" style="width:50px;height:50px;">
-<br>
-<br>
-<br>
-<br>
-<br>
-<!-- Footer -->
-<div class="footer-social-icons">
-    <h4 class="_14">Let's Connect</h4>
-    <ul class="social-icons">
-        <li><a href="mailto:molly.trace@gmail.com" class="social-icon"> <i class="fa fa-envelope"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/mollydtrace/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-        <li><a href="https://plus.google.com/+MollyTrace" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
-        <li><a href="https://www.instagram.com/mtrace/" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-    </ul>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="contact-info">
+        <div class="col-1">
+          <img src="sitepictures/DC.jpg" id="DC">
+        </div>
+        <div class="col-2">
+          <h4>You can reach me on:</h4>
+                <ul class="contact-social-icon" id="contact-icons">
+                    <li>
+                        <a href="mailto:molly.trace@gmail.com" class="contact-social-icon">
+                            <span class="fa-stack fa-lg">
+                                  <i class="fa fa-envelope"></i>
+                            </span>
+                            Email
+                        </a>
+                    </li>
+              
+                    <li>
+                        <a href="https://www.linkedin.com/in/mollydtrace/" class="contact-social-icon">
+                            <span class="fa-stack fa-lg">
+                                  <i class="fa fa-linkedin"></i>
+                            </span>
+                            LinkedIn
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/+MollyTrace" class="contact-social-icon">
+                            <span class="fa-stack fa-lg">
+                                  <i class="fa fa-google-plus"></i>
+                            </span> 
+                            Google +        
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/mtrace/" class="social-icon">
+                            <span class="fa-stack fa-lg">
+                                  <i class="fa fa-instagram"></i>
+                            </span>
+                            Instagram
+                        </a>
+                    </li>
+                </ul>
+                <br>
+                <br>
+        </div>
+    </div>
+    <div class="contact-footer">
+      <h5> <img src="sitepictures/location.png" alt="location marker" style="text-align: center;"> Currently located in Washington, DC
+      </h5>
+    </div>
+
+                <!--
+<div class="container-fluid contact_info" id="contact">
+        <div class="col-1">
+          <img src="sitepictures/DC.jpg">
+          <img src="sitepictures/location.png">
+          <h4> I Live in Washington, DC</h4>
+        </div>
+        <div class="col-2">
+            <div class="social lead">
+                <ul class="social-icons">
+                    <li>
+                        <a href="mailto:molly.trace@gmail.com" class="social-icon"> <i class="fa fa-envelope"></i>Email</a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/mollydtrace/" class="social-icon"> <i class="fa fa-linkedin"></i>LinkedIn</a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/+MollyTrace" class="social-icon"> <i class="fa fa-google-plus"></i>Google +</a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/mtrace/" class="social-icon"> <i class="fa fa-instagram"></i>Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
-
-
 
 </body>
 </html>
