--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
     <br>
     <br>
 
+<!-- Contact -->
     <div class="contact-info">
         <div class="col-1">
           <img src="sitepictures/DC.jpg" id="DC">
@@ -81,34 +82,6 @@
       <h5> <img src="sitepictures/location.png" alt="location marker" style="text-align: center;"> Currently located in Washington, DC
       </h5>
     </div>
-
-                <!--
-<div class="container-fluid contact_info" id="contact">
-        <div class="col-1">
-          <img src="sitepictures/DC.jpg">
-          <img src="sitepictures/location.png">
-          <h4> I Live in Washington, DC</h4>
-        </div>
-        <div class="col-2">
-            <div class="social lead">
-                <ul class="social-icons">
-                    <li>
-                        <a href="mailto:molly.trace@gmail.com" class="social-icon"> <i class="fa fa-envelope"></i>Email</a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/mollydtrace/" class="social-icon"> <i class="fa fa-linkedin"></i>LinkedIn</a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+MollyTrace" class="social-icon"> <i class="fa fa-google-plus"></i>Google +</a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/mtrace/" class="social-icon"> <i class="fa fa-instagram"></i>Instagram</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
 
 </body>
 </html>
