--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Molly Trace</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="sitepictures/faviconw.ico" type="image/x-icon">
 </head>
 
 
