--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <!--Header -->
 <div class="header">
 <header class="site-title">
-  <h1><b>MOLLY TRACE</b></h1>
+  <h1>MOLLY TRACE</h1>
 </header>
 </div>
-<br>
 
 <!-- Nav Menu -->
     <div class="navcontainer">
@@ -29,17 +28,11 @@
         </ul>
       </nav>
     </div>
-<br>
-<br>
-<br>
 
 <!-- About Pic -->
 <div class="mainpic">
 	<img class ="mainimage" src="sitepictures/mainhomemolly.jpg" alt="Woman standing in front of narrow stairs">
 </div>
-
-<br>
-<br>
 
 <!--About Attributes -->
 <table>
