--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     	<img src="sitepictures/mortarboard.png" alt="mortarboard" style="width:50px;height:50px;">
     </td>
     <td>
-		<p>B.S. Civil Engineering, May 2013</p>
+		<p>B.S. Civil Engineering</p>
     </td>
   </tr>
   <tr>
